[package]
name = "actix_lambda"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "bootstrap"
path = "src/main.rs"

[dependencies]
actix-web = "4.0.1"
aws-config = "0.11.0"
aws-sdk-dynamodb = "0.11.0"
env_logger = "0.9.0"
log = "0.4.16"
serde = {version = "1.0.137", features = ["derive"]}
uuid = {version = "1.0.0", features = ["v4"]}
